# mysql-adaptor-cpp

./: CMakeLists.txt  README.md
cmake-modules/: FindMySqlClient.cmake
example/: fetch_and_commit.cpp
include/: database_adaptor.h
src/: database_adaptor.cpp
